--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 </div>
                                 
                                 <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Naman Khobragade</h2>
-                                <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Web  Designer  |  Network Engineer</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">Full-stack Developer  |  Network Engineer</h4>
                                 
                                 <ul>
                                     <li class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><i class="fa fa-envelope"></i><a href="mailto:skhobragade993@gmail.com">skhobragade993@email.com</a></li>
@@ -841,7 +841,7 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                             <ul>
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
                                 <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
-                                <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Branding</span></li>
+                                <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>App</span></li>
                                 <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Logo</span></li>
                                 <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
                             </ul>
@@ -1182,8 +1182,8 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                             <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
               <div class="candidatos">
                                             <div class="parcial">
-                                                <div class="info">
-                                                    <div class="nome">Java</div>
+                                                <div class="info"> <h4>Language </h4>
+                                                    <div class="nome">English</div>
                                                     <div class="percentagem-num">46%</div>
                                                 </div>
                                                 <div class="progressBar">
@@ -1194,22 +1194,22 @@ The Admin is allowed to add, edit and delete Student and Faculty users. They can
                                         <div class="candidatos">
                                             <div class="parcial">
                                                 <div class="info">
-                                                    <div class="nome">Python</div>
-                                                    <div class="percentagem-num">38%</div>
+                                                    <div class="nome">Hindi</div>
+                                                    <div class="percentagem-num">80%</div>
                                                 </div>
                                                 <div class="progressBar">
-                                                    <div class="percentagem" style="width: 38%;"></div>
+                                                    <div class="percentagem" style="width: 80%;"></div>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="candidatos">
                                             <div class="parcial">
                                                 <div class="info">
-                                                    <div class="nome">PHP</div>
-                                                    <div class="percentagem-num">60%</div>
+                                                    <div class="nome">Marathi</div>
+                                                    <div class="percentagem-num">75%</div>
                                                 </div>
                                                 <div class="progressBar">
-                                                    <div class="percentagem" style="width: 60%;"></div>
+                                                    <div class="percentagem" style="width: 75%;"></div>
                                                 </div>
                                             </div>
                                         </div>                  
